@@ -1,15 +1,12 @@
 package cc.iboard.endpoints;
 
-import java.util.HashMap;
-import java.util.Map;
+import java.lang.reflect.InvocationTargetException;
 
 /**
  * The singleton `EndpointFactory` creates a class which is derived from `Endpoint`.
  */
 public enum EndpointFactory {
     INSTANCE;
-
-    private Map<String, Endpoint> handlers = new HashMap<>();
 
     public Endpoint createHandler(String handlerName) throws Exception {
        return newHandler(handlerName);
@@ -25,15 +22,18 @@ public enum EndpointFactory {
         }
     }
 
-    // TODO: Get rid of `newInstance`
     private Endpoint instantiateHandlerByName(String handlerName)
-            throws InstantiationException,
-                   IllegalAccessException,
-                   ClassNotFoundException
+            throws IllegalArgumentException, 
+            		   InvocationTargetException, 
+            		   NoSuchMethodException, 
+            		   SecurityException, 
+            		   InstantiationException, 
+            		   IllegalAccessException, 
+            		   ClassNotFoundException
     {
         Endpoint endpoint;
         String name = Endpoint.class.getPackage().getName();
-        endpoint = (Endpoint) Class.forName(name+"."+handlerName).newInstance();
+        endpoint = (Endpoint) Class.forName(name+"."+handlerName).getDeclaredConstructor().newInstance();
         return endpoint;
     }
 
